Redes sociales y Galeria
Configurando las iconos de redes sociales, maquetando galeria y agregando las imagenes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,36 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col m1">
+          <ul>
+            <li><a href="#"><img src="img/logofc.png" class="responsive-img"/></a></li>
+            <li><a href="#"><img src="img/logopint.png" class="responsive-img"/></a></li>
+            <li><a href="#"><img src="img/logoinst.png" class="responsive-img"/></a></li>
+            <li><a href="#"><img src="img/logoinst.png" class="responsive-img"/></a></li>
+            <li><a href="#"><img src="img/logoyt.png" class="responsive-img"/></a></li>
+          </ul>
+        </div>
+        <div class="col m4">
+          <img src="img/ciudadperdida.jpg" class="responsive-img z-depth-5"/>
+          <img src="img/grecia.jpg" class="responsive-img z-depth-5"/>
+        </div>
+        <div class="col m3">
+          <img src="img/borabora.jpg" class="responsive-img z-depth-5"/>
+        </div>
+        <div class="col m4">
+          <img src="img/puntacana.jpg" class="responsive-img z-depth-5"/>
+          <img src="img/riosietecolores.jpg" class="responsive-img z-depth-5
 
+          "/>
+        </div>
+      </div>
+      <div class="row post">
+        <div class="col m8">
+        </div>
+        <div class="col m4">
+        </div>
+      </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
