--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#"><img src="img/logofc.png" class="responsive-img"/></a></li>
             <li><a href="#"><img src="img/logopint.png" class="responsive-img"/></a></li>
             <li><a href="#"><img src="img/logoinst.png" class="responsive-img"/></a></li>
-            <li><a href="#"><img src="img/logoinst.png" class="responsive-img"/></a></li>
+            <li><a href="#"><img src="img/logotw.png" class="responsive-img"/></a></li>
             <li><a href="#"><img src="img/logoyt.png" class="responsive-img"/></a></li>
           </ul>
         </div>
@@ -49,11 +49,55 @@
           "/>
         </div>
       </div>
-      <div class="row post">
-        <div class="col m8">
+      <div class="row">
+        <div class="col m9">
+          <div class="card clearfix post">
+            <img src="img/islademan.jpg" class="imagen"/>
+            <h1>Isla de Man</h1>
+            <div class="chip">10 de Diciembre 2018<i class="material-icons iconos">event</i></div>
+            <div class="chip">Barranquilla, Colombia<i class="material-icons iconos">location_on</i></div>
+            <p>SI QUISIERA ver tiburones peregrinos, ¿adónde iría? Entre los mejores sitios para escoger está la isla de Man, ubicada en el mar de Irlanda, más o menos a igual distancia de Escocia, Gales, Inglaterra e Irlanda. Desde allí zarpan los excursionistas para ver cómo estas mansas criaturas marinas —que llegan a las cinco toneladas— se alimentan de plancton, su único sustento. Es “el lugar perfecto para el ecoturismo”, afirma Bill Dale, naturalista originario de Man.</p>
+            <p>Pero ¿cómo es la isla? Sus 570 kilómetros cuadrados [220 millas cuadradas] de verdes valles y pardas llanuras, de lagos, ríos y bahías pintorescas, y de acantilados y costas escarpadas sirven de hogar a 70.000 habitantes. Lo invitamos a explorar con nosotros algunos tesoros de esta región de las islas británicas y descubrir su historia.</p>
+            <h5>Atracciones turísticas</h5>
+            <p>Entre la fauna autóctona que suele atraer a los visitantes se encuentra el manx, un gato que se distingue por carecer de cola. Además, tiene las patas traseras más largas que las delanteras, por lo que adopta una postura parecida a la de la liebre. Su origen no se conoce con seguridad, pero hay quien afirma que la raza surgió siglos atrás, cuando unos marineros trajeron unos gatitos de Asia, donde existen gatos sin cola.</p>
+          </div>
         </div>
-        <div class="col m4">
+        <div class="col m3">
+          <div class="card clearfix center-align post">
+            <img src="img/islademan.jpg" class="responsive-img circle" width="50%"/>
+            <hr/>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <form class="col m9">
+          <h4>Deja tu comentario</h4>
+          <div class="row">
+            <div class="col m6">
+              <div class="input-field">
+                <i class="material-icons prefix">person</i>
+                <input id="nombre" type="text">
+                <label for="nombre">Nombre</label>
+              </div>
+            </div>
+            <div class="col m6">
+              <div class="input-field">
+                <i class="material-icons prefix">email</i>
+                <input id="nombre" type="text">
+                <label for="nombre">Correo electrónico</label>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m12">
+              <i class="material-icons prefix">insert_comment</i>
+              <textarea placeholder="Comentario" id="textarea" class="materialize-textarea"></textarea>
+              <label for="textarea left"></label>
+              <a class="btn right" for="textarea">Enviar</a>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
