--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
   </head>
   <body>
     <div class="row">
-      <div class="row amber lighten-2 logomenu">
-        <div class=" col m2">
+      <div class="row logomenu">
+        <div class="col s6 m2">
           <img src="img/logosf.svg" class="responsive-img"/>
         </div>
-        <div class="col m4">
-          <h4 class="slogan">Probando Slogan<h4>
+        <div class="col s6 m10 right-align">
+          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">home</i> INICIO</a>
+          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">location_on</i> ESTUVE EN...</a>
+          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">star</i> MEJORES VIAJES</a>
+          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">sms_failed</i> RECOMENDACIONES</a>
         </div>
-        <div class="col m6">
-          <div>
-            <a class="amber darken-1 black-text waves-effect waves-light btn">INICIO</a>
-            <a class="amber darken-1 black-text waves-effect waves-light btn">ESTUVE EN...</a>
-            <a class="amber darken-1 black-text waves-effect waves-light btn">MEJORES VIAJES</a>
-            <a class="amber darken-1 black-text waves-effect waves-light btn">RECOMENDACIONES</a>
-          </div>
+        <div class="col s12 m10">
+            <div class="col s12 m12 left">
+              <h4 class="slogan">Cada sitio tiene su historia<h4>
+            </div>
         </div>
+
       </div>
       <div class="row">
-        <div class="col m1">
+        <div class="col m1 hide-on-small-only">
           <ul>
             <li><a href="#"><img src="img/logofc.png" class="responsive-img"/></a></li>
             <li><a href="#"><img src="img/logopint.png" class="responsive-img"/></a></li>
@@ -50,55 +51,61 @@
         </div>
       </div>
       <div class="row">
-        <div class="col m9">
-          <div class="card clearfix post">
-            <img src="img/islademan.jpg" class="imagen"/>
-            <h1>Isla de Man</h1>
+        <div class="col m10">
+          <div class="row card clearfix">
+            <img src="img/islademan.jpg" class="responsive-img col s12 m4" style="margin-top:50px;"/>
+            <h1 class="col s12 m8">Isla de Man</h1>
             <div class="chip">10 de Diciembre 2018<i class="material-icons iconos">event</i></div>
             <div class="chip">Barranquilla, Colombia<i class="material-icons iconos">location_on</i></div>
-            <p>SI QUISIERA ver tiburones peregrinos, ¿adónde iría? Entre los mejores sitios para escoger está la isla de Man, ubicada en el mar de Irlanda, más o menos a igual distancia de Escocia, Gales, Inglaterra e Irlanda. Desde allí zarpan los excursionistas para ver cómo estas mansas criaturas marinas —que llegan a las cinco toneladas— se alimentan de plancton, su único sustento. Es “el lugar perfecto para el ecoturismo”, afirma Bill Dale, naturalista originario de Man.</p>
-            <p>Pero ¿cómo es la isla? Sus 570 kilómetros cuadrados [220 millas cuadradas] de verdes valles y pardas llanuras, de lagos, ríos y bahías pintorescas, y de acantilados y costas escarpadas sirven de hogar a 70.000 habitantes. Lo invitamos a explorar con nosotros algunos tesoros de esta región de las islas británicas y descubrir su historia.</p>
-            <h5>Atracciones turísticas</h5>
-            <p>Entre la fauna autóctona que suele atraer a los visitantes se encuentra el manx, un gato que se distingue por carecer de cola. Además, tiene las patas traseras más largas que las delanteras, por lo que adopta una postura parecida a la de la liebre. Su origen no se conoce con seguridad, pero hay quien afirma que la raza surgió siglos atrás, cuando unos marineros trajeron unos gatitos de Asia, donde existen gatos sin cola.</p>
+            <p class="col s12 m8">SI QUISIERA ver tiburones peregrinos, ¿adónde iría? Entre los mejores sitios para escoger está la isla de Man, ubicada en el mar de Irlanda, más o menos a igual distancia de Escocia, Gales, Inglaterra e Irlanda. Desde allí zarpan los excursionistas para ver cómo estas mansas criaturas marinas —que llegan a las cinco toneladas— se alimentan de plancton, su único sustento. Es “el lugar perfecto para el ecoturismo”, afirma Bill Dale, naturalista originario de Man.</p>
+            <p class="col s12">Pero ¿cómo es la isla? Sus 570 kilómetros cuadrados [220 millas cuadradas] de verdes valles y pardas llanuras, de lagos, ríos y bahías pintorescas, y de acantilados y costas escarpadas sirven de hogar a 70.000 habitantes. Lo invitamos a explorar con nosotros algunos tesoros de esta región de las islas británicas y descubrir su historia.</p>
+          </div>
+          <div class="row">
+            <form class="col m12 card teal lighten-1">
+              <h4>Deja tu comentario</h4>
+              <div class="row">
+                <div class="col s12 m6">
+                  <div class="input-field">
+                    <i class="material-icons prefix">person</i>
+                    <input id="nombre" type="text">
+                    <label for="nombre" class="white-text">Nombre</label>
+                  </div>
+                </div>
+                <div class="col s12 m6">
+                  <div class="input-field">
+                    <i class="material-icons prefix">email</i>
+                    <input id="nombre" type="text">
+                    <label for="nombre" class="white-text">Correo electrónico</label>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col s12 m12">
+                  <div class="row">
+                    <div class="col s12">
+                      <i class="material-icons prefix">insert_comment</i>
+                      <textarea placeholder="Comentario" id="textarea" class="materialize-textarea"></textarea>
+                      <label for="textarea left"></label>
+                    </div>
+                    <div class="col s12 s-center right-align">
+                      <button class="btn waves-effect waves-light" type="submit" name="action">Enviar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-        <div class="col m3">
+        <div class="col s12 m2">
           <div class="card clearfix center-align post">
-            <img src="img/islademan.jpg" class="responsive-img circle" width="50%"/>
-            <hr/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <img class="circle imagenpost" src="img/smith.jpg" width="50%"/>
+            <h5>Smith Ferrer</h5>
+            <hr class="separador"/>
+            <p>Soy tecnólogo en administracion de redes de computadores, me gusta el futbol tanto jugarlo como verlo, el cine es otro de mis pasatiempos favoritos, he creado este blog como parte de un proyecto personal, espero les guste cada historia que encuentren en el.</p>
           </div>
         </div>
       </div>
-      <div class="row">
-        <form class="col m9">
-          <h4>Deja tu comentario</h4>
-          <div class="row">
-            <div class="col m6">
-              <div class="input-field">
-                <i class="material-icons prefix">person</i>
-                <input id="nombre" type="text">
-                <label for="nombre">Nombre</label>
-              </div>
-            </div>
-            <div class="col m6">
-              <div class="input-field">
-                <i class="material-icons prefix">email</i>
-                <input id="nombre" type="text">
-                <label for="nombre">Correo electrónico</label>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col m12">
-              <i class="material-icons prefix">insert_comment</i>
-              <textarea placeholder="Comentario" id="textarea" class="materialize-textarea"></textarea>
-              <label for="textarea left"></label>
-              <a class="btn right" for="textarea">Enviar</a>
-            </div>
-          </div>
-        </form>
-      </div>
+
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
