Segundo Post y Retoque final
Creando el segundo post y retoque final a la pagina

--- a/index.html
+++ b/index.html
@@ -53,12 +53,24 @@
       <div class="row">
         <div class="col m10">
           <div class="row card clearfix">
-            <img src="img/islademan.jpg" class="responsive-img col s12 m4" style="margin-top:50px;"/>
-            <h1 class="col s12 m8">Isla de Man</h1>
-            <div class="chip">10 de Diciembre 2018<i class="material-icons iconos">event</i></div>
-            <div class="chip">Barranquilla, Colombia<i class="material-icons iconos">location_on</i></div>
-            <p class="col s12 m8">SI QUISIERA ver tiburones peregrinos, ¿adónde iría? Entre los mejores sitios para escoger está la isla de Man, ubicada en el mar de Irlanda, más o menos a igual distancia de Escocia, Gales, Inglaterra e Irlanda. Desde allí zarpan los excursionistas para ver cómo estas mansas criaturas marinas —que llegan a las cinco toneladas— se alimentan de plancton, su único sustento. Es “el lugar perfecto para el ecoturismo”, afirma Bill Dale, naturalista originario de Man.</p>
+            <img src="img/islademan.jpg" class="responsive-img col s12 m4" style="margin-top:30px;"/>
+            <div class="col s12 m8">
+              <h1>Isla de Man</h1>
+              <div class="chip">10 de Diciembre 2018<i class="material-icons iconos">event</i></div>
+              <div class="chip">Barranquilla, Colombia<i class="material-icons iconos">location_on</i></div>
+              <p>SI QUISIERA ver tiburones peregrinos, ¿adónde iría? Entre los mejores sitios para escoger está la isla de Man, ubicada en el mar de Irlanda, más o menos a igual distancia de Escocia, Gales, Inglaterra e Irlanda. Desde allí zarpan los excursionistas para ver cómo estas mansas criaturas marinas —que llegan a las cinco toneladas— se alimentan de plancton, su único sustento. Es “el lugar perfecto para el ecoturismo”, afirma Bill Dale, naturalista originario de Man.</p>
+            </div>
             <p class="col s12">Pero ¿cómo es la isla? Sus 570 kilómetros cuadrados [220 millas cuadradas] de verdes valles y pardas llanuras, de lagos, ríos y bahías pintorescas, y de acantilados y costas escarpadas sirven de hogar a 70.000 habitantes. Lo invitamos a explorar con nosotros algunos tesoros de esta región de las islas británicas y descubrir su historia.</p>
+          </div>
+          <div class="row card clearfix">
+            <div class="col s12 m7">
+              <h1>El Baikal: el lago más profundo del mundo</h1>
+              <div class="chip">13 de Diciembre 2018<i class="material-icons iconos">event</i></div>
+              <div class="chip">Santa Marta, Colombia<i class="material-icons iconos">location_on</i></div>
+            </div>
+            <img src="img/lagobaikal.jpg" class="responsive-img col s12 m5" style="margin-top:20px;"/>
+            <p class="col s12">LOS mongoles de la remota región del sur de Siberia lo han reverenciado desde tiempos inmemoriales. Aunque existen otros de mayor superficie, este es el lago de agua dulce más profundo del mundo y, con mucho, el de mayor volumen. Se lo ha llamado de varias maneras, pero el nombre que ha perdurado hasta hoy es Baikal, que posiblemente significa “lago rico” o “mar”. De hecho, por ser tan inmenso y tan cambiante, los pescadores de sus costas a veces hablan de “salir al mar”.</p>
+            <p class="col s12">La mención del lago Baikal toca la fibra sensible de los rusos. Una científica de Moscú lo asemejó a “una bella pieza musical que se aprende de pequeño”. Sus “notas” son muchas: playas fascinantes, aguas de increíble transparencia y una diversidad de extraños seres que no se ven en ningún otro lugar.</p>
           </div>
           <div class="row">
             <form class="col m12 card teal lighten-1">
