--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <img src="img/logosf.svg" class="responsive-img"/>
         </div>
         <div class="col s6 m10 right-align">
-          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">home</i> INICIO</a>
-          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">location_on</i> ESTUVE EN...</a>
-          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">star</i> MEJORES VIAJES</a>
-          <a class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">sms_failed</i> RECOMENDACIONES</a>
+          <a href="index.html" class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">home</i> INICIO</a>
+          <a href="pag/estuve.html" class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">location_on</i> ESTUVE EN...</a>
+          <a href="pag/mejores.html" class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">star</i> MEJORES VIAJES</a>
+          <a href="pag/recomendaciones.html" class="amber darken-1 black-text waves-effect waves-light btn"><i class="material-icons iconos">sms_failed</i> RECOMENDACIONES</a>
         </div>
         <div class="col s12 m10">
             <div class="col s12 m12 left">
@@ -37,17 +37,15 @@
           </ul>
         </div>
         <div class="col m4">
-          <img src="img/ciudadperdida.jpg" class="responsive-img z-depth-5"/>
-          <img src="img/grecia.jpg" class="responsive-img z-depth-5"/>
+          <a href="#"><img src="img/ciudadperdida.jpg" class="responsive-img z-depth-5"/></a>
+          <a href="pag/estuve.html"><img src="img/minca.jpg" class="responsive-img z-depth-5"/></a>
         </div>
         <div class="col m3">
-          <img src="img/borabora.jpg" class="responsive-img z-depth-5"/>
+          <a href="#"><img src="img/borabora.jpg" class="responsive-img z-depth-5"/></a>
         </div>
         <div class="col m4">
-          <img src="img/puntacana.jpg" class="responsive-img z-depth-5"/>
-          <img src="img/riosietecolores.jpg" class="responsive-img z-depth-5
-
-          "/>
+          <a href="#"><img src="img/plazabotero.jpeg" class="responsive-img z-depth-5"/></a>
+          <a href="#"><img src="img/riosietecolores.jpg" class="responsive-img z-depth-5"/></a>
         </div>
       </div>
       <div class="row">
